# swi_prolog

./: CMakeLists.txt  README.md  package.xml
include/reasoner/: reasoner.h
msg/: Bindings.msg
src/: reasoner.cpp  reasoner_server.cpp
srv/: Query.srv
test/: test_reasoner.cpp
