<?xml version="1.0"?>
<package>
  <name>swi_prolog</name>
  <version>0.0.0</version>
  <description>ROS wrapper for SWI-Prolog</description>

  <maintainer email="s.v.d.dries@tue.nl">Sjoerd van den Dries</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>swi-prolog</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>

</package>
